Commiting New Codes

--- a/src/main/resources/override.conf
+++ b/src/main/resources/override.conf
@@ -3,3 +3,78 @@
     name = "overrides"
   }
   }
+
+
+
+hive-database = [
+  { name="saturn"
+    db=""
+    user=""
+    pass=""
+    connParam=""
+    Host=""
+    port=""
+
+
+  },
+
+  {  name="liquiplus"
+         db=""
+         user=""
+         pass=""
+         connParam=""
+         Host=""
+         port=""
+   }
+
+  ]
+
+
+  file-details=[
+
+  { filename=""
+    type=""
+    srcDir=""
+    tgtType=""
+    table=""
+    tgtDatabase=""
+},
+{     filename=""
+          type=""
+          srcDir=""
+          tgtType=""
+          table=""
+          tgtDatabase=""
+ }
+]
+
+impala-connection =[
+
+{
+},
+{
+
+
+}
+
+
+]
+
+sql-database=[
+
+{ name=""
+  user=""
+  pass=""
+  database=""
+  conncUrl=""
+  host=""
+ },
+ {name=""
+    user=""
+    pass=""
+    database=""
+    conncUrl=""
+    host=""
+  }
+]
+
