--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>spark-excel_2.11</artifactId>
             <version>0.12.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.typesafe/config -->
 <!--        <dependency>-->
